2008-07-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	* flumotion/component/encoders/Makefile.am:
	* flumotion/component/encoders/flv/Makefile.am:
	* flumotion/component/encoders/vp6/Makefile.am:
	* flumotion/component/encoders/vp6 (added):
	  First pass at splitting off vp6 from flv dir.

2008-07-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/aac/Makefile.am:
	* flumotion/component/encoders/aac/aac.xml:
	* flumotion/component/encoders/mp3/Makefile.am:
	* flumotion/component/encoders/mp3/mp3.xml:
	* flumotion/component/encoders/mp3/wizard_gtk.py (added):
	* flumotion/component/encoders/aac/wizard_gtk.py (added):
	* flumotion/component/encoders/mp3/mp3_wizard.py (deleted):
	* flumotion/component/encoders/aac/aac_wizard.py (deleted):
	  rename to wizard_gtk.py

2008-07-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/aac/aac_wizard.py:
	  Fix title and translation.

2008-07-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion-flash.spec.in:
	  Add requirements.

2008-07-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/mp3/mp3.py:
	  Check for lame element.

2008-07-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/flv/flv_wizard.py:
	* flumotion/component/encoders/flv/vp6_wizard.py:
	* flumotion/component/encoders/mp3/mp3_wizard.py:
	  Fix title and translation.

2008-07-18  Thomas Vander Stichele  <thomas at apestaart dot org>

	* Makefile.am:
	* configure.ac:
	* flumotion/test/Makefile.am:
	* env.in (added):
	* env (deleted):
	  Generate.

2008-07-02  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/encoders/aac/aac_wizard.py:
	* flumotion/component/encoders/mp3/mp3_wizard.py:
	Do not add a warning, requireElement is already
	adding an error.

2008-06-29  Thomas Vander Stichele  <thomas at apestaart dot org>
